IF(${JAVASCRIPT_EXTENSION} MATCHES "JSC")
	FIND_PACKAGE(JavaScriptCore REQUIRED)
	include_directories(${JavaScriptCore_INCLUDE_DIRS})
	SET(JSE_LDFLAG ${JavaScriptCore_LIBRARIES})
	SET(TARGET_SWIGFLAGS "-jsc")
ELSEIF(${JAVASCRIPT_EXTENSION} MATCHES "V8")
	FIND_PACKAGE(V8 REQUIRED)
	include_directories(${V8_INCLUDE_DIR})
	SET(JSE_LDFLAG ${V8_LIBRARY})
	SET(TARGET_SWIGFLAGS "-v8")
ELSEIF(${JAVASCRIPT_EXTENSION} MATCHES "NODE")
	list(APPEND CMAKE_MODULE_PATH
		${CMAKE_SOURCE_DIR}/node_modules/node-cmake
	)
	FIND_PACKAGE(NodeJS REQUIRED)
	include_directories(${NodeJS_INCLUDE_DIRS})
	SET(JSE_LDFLAG ${NodeJS_LINK_FLAGS})
	SET(TARGET_SWIGFLAGS "-node")
ELSE()
	MESSAGE(FATAL_ERROR "Unkown javascript extension type specified, please choose from: JSC, NODE, V8")
ENDIF()

include(CommonModularInterface)

SET(JAVASCRIPT_MODULAR_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
GENERATE_MODULAR_TARGET(javascript ${CMAKE_CURRENT_SOURCE_DIR} ${JSE_LDFLAG})
