include(CommonModularInterface)
include_directories(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

GENERATE_MODULAR_TARGET(lua ${CMAKE_CURRENT_SOURCE_DIR} ${LUA_LIBRARIES})

INSTALL(TARGETS lua_modular
	LIBRARY DESTINATION lib/lua/
	COMPONENT lua)

set(CPACK_COMPONENT_LUA_DISPLAY_NAME "Lua interface" PARENT_SCOPE)
set(CPACK_COMPONENT_LUA_DESCRIPTION "Lua modular interface of Shogun" PARENT_SCOPE)
set(CPACK_COMPONENT_LUA_GROUP "Runtime" PARENT_SCOPE)
set(CPACK_COMPONENT_LUA_DEPENDS libraries PARENT_SCOPE)
SET(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} lua PARENT_SCOPE)
